--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       
 
       <ul class="buttonsHeader">
-        <li><i class="material-icons">notifications_none</i></li>
-        <li><i class="material-icons">mail_outline</i></li>
-        <li><i class="material-icons">add_circle_outline</li>
-        <li><i class="material-icons">people_outline</i></li>
-        <li><i class="material-icons">person_pin</i></li>
+        <li>notifications_none</li>
+        <li>mail_outline</li>
+        <li>add_circle_outline</li>
+        <li>people_outline</li>
+        <li>person_pin</li>
       </ul>
       
     </header>
